# gr-radar

./: CMakeLists.txt  MANIFEST.yml
.ci_support/: linux_64_numpy1.20python3.8.____cpython.yaml  linux_64_numpy1.20python3.9.____cpython.yaml  linux_64_numpy1.21python3.10.____cpython.yaml  linux_64_numpy1.22python3.10.____cpython.yaml  linux_64_numpy1.22python3.8.____cpython.yaml  linux_64_numpy1.22python3.9.____cpython.yaml  linux_64_numpy1.23python3.11.____cpython.yaml  linux_64_numpy1.26python3.12.____cpython.yaml  linux_64_python3.10.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml  linux_aarch64_numpy1.20python3.8.____cpython.yaml  linux_aarch64_numpy1.20python3.9.____cpython.yaml  linux_aarch64_numpy1.21python3.10.____cpython.yaml  linux_aarch64_numpy1.22python3.10.____cpython.yaml  linux_aarch64_numpy1.22python3.8.____cpython.yaml  linux_aarch64_numpy1.22python3.9.____cpython.yaml  linux_aarch64_numpy1.23python3.11.____cpython.yaml  linux_aarch64_numpy1.26python3.12.____cpython.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.8.____cpython.yaml  linux_aarch64_python3.9.____cpython.yaml  linux_ppc64le_numpy1.22python3.10.____cpython.yaml  linux_ppc64le_numpy1.22python3.8.____cpython.yaml  linux_ppc64le_numpy1.22python3.9.____cpython.yaml  linux_ppc64le_numpy1.23python3.11.____cpython.yaml  linux_ppc64le_numpy1.26python3.12.____cpython.yaml  linux_ppc64le_python3.10.____cpython.yaml  linux_ppc64le_python3.8.____cpython.yaml  linux_ppc64le_python3.9.____cpython.yaml  (+33 more)
examples/: CMakeLists.txt
(+5 files in other folders)
